使用APO切面添加操作日志

--- a/by-springBoot-lesson02/pom.xml
+++ b/by-springBoot-lesson02/pom.xml
@@ -148,6 +148,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!-- Spring Boot应用提供面向切面编程（AOP）功能支持 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
     </dependencies>
 
