部门采购基本信息

--- a/by-springBoot-lesson02/pom.xml
+++ b/by-springBoot-lesson02/pom.xml
@@ -153,6 +153,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!-- Alibaba EasyExcel - 高性能、简单易用的Java Excel处理工具 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.3.2</version>
+        </dependency>
 
     </dependencies>
 
