--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
         <dynamic-datasource.version>4.1.3</dynamic-datasource.version>
         <!-- Fastjson2版本：阿里巴巴高性能JSON处理库的版本号 -->
         <fastjson2.version>2.0.51</fastjson2.version>
+        <!-- EasyExcel 版本：高性能、简单易用的Java Excel处理工具 -->
+        <easyexcel.version>3.3.2</easyexcel.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -141,6 +143,12 @@
                 <groupId>com.alibaba.fastjson2</groupId>
                 <artifactId>fastjson2</artifactId>
                 <version>${fastjson2.version}</version> <!-- 使用2.0.51及以上版本 -->
+            </dependency>
+            <!-- Alibaba EasyExcel - 高性能、简单易用的Java Excel处理工具 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
